[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "log-triage"
version = "3.0.0"
description = "SRE log review and incident triage OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.11,<3",
    "numpy>=1.26,<3",
    "openai>=1.12",
    "requests>=2.31,<3",
    "PyYAML>=6.0.1,<7",
    "sentence-transformers==2.7.0",
    "scikit-learn>=1.4,<2",
    "rank-bm25>=0.2.2,<1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

